unifi/unifi.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unifi
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: unifi-controller
  namespace: unifi
spec:
  replicas: 1
  selector:
    matchLabels:
      name: unifi-controller
  template:
    metadata:
      name: unifi-controller
      labels:
        name: unifi-controller
    spec:
      volumes:
        - name: unifi-pvc
          persistentVolumeClaim:
            claimName: unifi-pvc
      containers:
        - name: unifi-controller
          image: 'jacobalberty/unifi:v6.5.55'
          ports:
            - containerPort: 3478
              protocol: UDP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8843
              protocol: TCP
            - containerPort: 8880
              protocol: TCP
            - containerPort: 6789
              protocol: TCP
          volumeMounts:
            - name: unifi-pvc
              mountPath: /unifi
---
kind: Service
apiVersion: v1
metadata:
  name: unifi-controller
  namespace: unifi
  labels:
    app: unifi-controller
spec:
  ports:
    - name: '3478'
      protocol: UDP
      port: 3478
      targetPort: 3478
    - name: '8080'
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: '8443'
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: '8843'
      protocol: TCP
      port: 8843
      targetPort: 8843
    - name: '8880'
      protocol: TCP
      port: 8880
      targetPort: 8880
    - name: '6789'
      protocol: TCP
      port: 6789
      targetPort: 6789
  selector:
    name: unifi-controller
